--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-
+**/.idea
+**/.mvn
+**/target
+**/.iml
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
